# pyonhm_mirror

./: .gitlab-ci.yml  README.md  docker-compose.yml  install_miniforge.sh  logging.yaml  nhm_conus.env  nhm_uc.env  pyproject.toml
.github/: copilot-instructions.md
cron/: run_cfsv2_update.sh  run_operational.sh
data/: variable_info_new.json
notebooks/: check_zarr_conv.ipynb  daily_outout_to_zarr.ipynb  prep_conus_case.ipynb  prep_uc_case.ipynb
pyonhm/: docker_compose_manager.py  docker_manager.py  utils.py
pyonhm/base/: Dockerfile  entrypoint.sh
pyonhm/cfsv2etl/: Dockerfile
pyonhm/gridmetetl/: Dockerfile
pyonhm/ncf2cbh/: Dockerfile  ncf2cbh  ncf2cbh_gfv11_embedded.py
pyonhm/ncf2zarr/: Dockerfile  ncf2zarr  ncf2zarr.py
pyonhm/out2ncf/: Dockerfile  out2ncf  out2ncf.py  out2ncf_embedded.py
pyonhm/prms/: Dockerfile
