[tool.poetry]
name = "pyonhm"
version = "0.1.0"
description = ""
authors = ["Richard McDonald <rmcd@usgs.gov>"]
readme = "README.md"
packages = [
    {include = "pyonhm"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gdptools = "0.2.16"
pytz = "^2024.1"
xmltodict = "^0.13.0"
cyclopts = "^3"
docker = "^7.0.0"

[tool.poetry.scripts]
pyonhm = "pyonhm.docker_compose_manager:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
sciencebasepy = "^2.0.18"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"
mkdocstrings = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
